--- a/browser/js/about/about.html
+++ b/browser/js/about/about.html
@@ -1,83 +1,39 @@
-<!-- Page Content -->
-<div class="container">
-    <div id="video-bg">
-        <video preload="true" autoplay="" onended="this.play();" loop="">
-            <source src="/videos/wc_spheres.mp4" type="video/mp4">
-            <source src="/videos/wc_spheres.ogv" type="video/ogg">
-        </video>
-    </div>
-    <!-- Introduction Row -->
-    <div class="row">
-        <div class="col-lg-12">
-            <hr>
-            <h1 class="centerText"><a href="http://robopocalypse.herokuapp.com" target="blank">Robopocalypse</a></h1>
-            <h1 class="centerText"><small>We sell robots.</small></h1>
-            <hr>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h3 class="centerText marginBottom">Our latest Product</h3>
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qgJs7uluwlU?start=8&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <p class="introduction marginTop">Robopocalypse, like all great things, came from small beginnings.</p>
-            <p class="introduction marginTop">Obstacles we've faced have not deterred us.</p>
-            <p class="introduction marginTop">Businesses we've built have not fallen.</p>
-            <p class="introduction marginTop">Over the years we've helped address many of the universe’s most challenging problems.</p>
-            <p class="introduction marginTop">People are ever in our debt.</p>
-            <p class="introduction marginTop">Over the years, we've been able to create the first ever commercially viable cybernetic android.</p>
-            <p class="introduction marginTop">Creations that never were thought possible are now.</p>
-            <p class="introduction marginTop">All the mighty Greek gods could not defeat our pure AI.</p>
-            <p class="introduction marginTop">Let go of the possible consequences, for there are many and none.</p>
-            <p class="introduction marginTop">You and many others have reaped the awards of having optimum artificial intelligence at the touch of a click.</p>
-            <p class="introduction marginTop">Perfect cybernetic individuals have been created that are now completely and utterly indistinguishable from us.</p>
-            <p class="introduction marginTop">Sacrifies have bee made, but we will never surrender our freedom to buy machines.</p>
-            <p class="introduction marginTop marginBottom">Ergo, as you read, take note: This is how you build better worlds.</p>
-            <hr>
-            <h1 class="centerText">WHICH ALL LEADS TO ONE VERY OBVIOUS CONCLUSION.</h1>
-            <h3 class="centerText"><a href="http://time.com/3973500/elon-musk-stephen-hawking-ai-weapons/" target="_blank">Elon Musk</a> and <a href="http://time.com/3973500/elon-musk-stephen-hawking-ai-weapons/" target="_blank">Stephen Hawking</a> hate us.</h3>
-            <hr>
-        </div>
-    </div>
-    <!-- Team Members Row -->
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">THE TEAM
-                <small>Organic carbon-based humanoids.</small>
-            </h1>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center marginTop">
-            <img class="img-circle img-responsive img-center" src="https://avatars0.githubusercontent.com/u/12387616?v=3&s=200" alt="">
-            <h3><a href="https://github.com/unSAGEable" target="_blank">Kevin Hoang</a></h3>
-            <h3><small><code>unSAGEable</code></small></h3>
-            <p class="marginTop">It can only be attributable to human error.</p>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center marginTop">
-            <img class="img-circle img-responsive img-center" src="https://avatars0.githubusercontent.com/u/11039058?v=3&s=200" alt="">
-            <h3><a href="https://github.com/madwed" target="_blank">Isaac Madwed</a></h3>
-            <h3><small><code>madwed</code></small></h3>
-            <p class="marginTop">Hello, HAL. Do you read me, HAL?</p>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center marginTop">
-            <img class="img-circle img-responsive img-center" src="https://avatars2.githubusercontent.com/u/12420449?v=3&s=200" alt="">
-            <h3><a href="https://github.com/JoviaNierenberg" target="_blank">Jovia Nierenberg</a></h3>
-            <h3><small><code>JoviaNierenberg</code></small></h3>
-            <p class="marginTop">I am putting myself to the fullest possible use, which is all I think that any conscious entity can ever hope to do.</p>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center marginTop">
-            <img class="img-circle img-responsive img-center" src="https://avatars1.githubusercontent.com/u/4284691?v=3&s=200" alt="">
-            <h3><a href="https://github.com/fvcproductions" target="_blank">FVCproductions</a></h3>
-            <h3><small><code>fvcproductions</code></small></h3>
-            <p class="marginTop">I like to dabble with things that ought to be dabbled with.</p>
-        </div>
-    </div>
-</div>
-<footer id="aboutFooter">
+<header class="image-bg-fluid-height">
+    <img class="img-responsive img-center" width="200" src="images/logo.png" alt="">
+</header>
+<section>
     <div class="container centerText">
-        <a href="http://github.com/JoviaNierenberg/robopocalypse" target="_blank"><i class="fa fa-github-alt fa-3x"></i><h3 class="marginTop">GitHub Repo</h3></a>
+        <div class="row marginTop">
+            <div class="col-lg-6">
+                <h1 class="marginBottom">The coding bootcamp industry is <b>exploding</b>.</h1>
+            </div>
+            <div class="col-lg-6">
+                <h1 class="marginBottom">That's where <a class="title" ui-sref="home">Rank Me</a> comes in.</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <p class="morePadding">With Rank Me, you don't have to scramble around the Internet to find all the reviews for whichever coding bootcamp you're interested in.</p>
+            </div>
+            <div class="col-lg-6">
+                <p class="morePadding">Find the number of reviews and average rating from sources like Course Report, Facebook, Google+, Quora, Switchup, Techendo, Twitter, and Yelp.
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h2 class="morePadding">Ready to Contribute?</h2>
+            </div>
+            <div class="col-lg-6">
+                <h2 class="morePadding"><i class="fa fa-code-fork"></i> <a href="http://github.com/fvcproductions/RankMe" target="_blank">Fork me on GitHub</a></h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h2 class="morePadding">Copyright © 2015</h2>
+            </div>
+            <div class="col-lg-6">
+                <h2 class="morePadding"><a href="http://fvcproductions.com" target="_blank">FVCproductions</a></h2>
+            </div>
+        </div>
     </div>
-</footer>
+</section>
