--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a rel="home" ui-sref="home" title="Rank.me" class="navbar-brand">
+            <a rel="home" ui-sref="home" title="Rank.me" class="navbar-brand header--logo">
                 <logo></logo>
             </a>
         </div>
