--- a/browser/js/admin/directives/products/admin-products.html
+++ b/browser/js/admin/directives/products/admin-products.html
@@ -1,79 +1,62 @@
-<div class="row">
-    <div class="mdl-card mdl-shadow--3dp">
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12">
-                <a ng-click="showAddProduct = showAddProduct ? false : true"><h3>Add a product</h3></a>
-            </div>
-        </div>
-        <div class="row" ng-show="showAddProduct">
-            <form>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="row">
-                        <md-input-container class="lineItem" flex>
-                            <label>Image URL</label>
-                            <input class="lineItem adminProductThumb" ng-model="addingImage" />
-                        </md-input-container>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <a class="btn btn-primary btn-md btn-standard" ng-click="addImage()">ADD ANOTHER PHOTO</a>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <md-input-container class="lineItem" flex>
-                            <label>ID (automatically added)</label>
-                            <input class="lineItem" disabled />
-                        </md-input-container>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <md-input-container class="lineItem" flex>
-                            <label>Title</label>
-                            <input ng-model="newProduct.title" />
-                        </md-input-container>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <a class="btn btn-primary btn-lg btn-standard" ng-click="addProduct()">ADD THIS PRODUCT</a>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="row marginTop marginBottom">
-                        <md-input-container class="lineItem" flex>
-                            <label>Description</label>
-                            <textarea ng-model="newProduct.description"></textarea>
-                        </md-input-container>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <md-input-container class="lineItem" flex>
-                            <label>Price</label>
-                            <input ng-model="newProduct.price" />
-                        </md-input-container>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <md-input-container class="lineItem" flex>
-                            <label>Inventory</label>
-                            <input ng-model="newProduct.inventory" />
-                        </md-input-container>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <md-input-container class="lineItem">
-                            <md-select ng-model="newProduct.seller" placeholder="{{newProduct.seller ? newProduct.seller.storeName : 'What store does it belong to?'}}" style="min-width: 200px;">
-                                <md-option ng-value="store" ng-repeat="store in stores">{{store.storeName}}</md-option>
-                            </md-select>
-                        </md-input-container>
-                    </div>
-                    <div class="row marginTop marginBottom">
-                        <fieldset class="standard">
-                            <label>Categories</label>
-                            <div layout="row" layout-wrap>
-                                <div ng-repeat="category in categories">
-                                    <md-checkbox ng-checked="exists(category._id, newProduct.category)" ng-click="toggle(category._id, newProduct.category)">
-                                        {{ category.name }}
-                                    </md-checkbox>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </div>
-                </div>
-            </form>
+<div class="mdl-card mdl-shadow--3dp centerText marginBottom">
+    <div class="row marginTopBottom">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <h3>Add a bootcamp</h3>
         </div>
     </div>
-    <admin-product-line ng-repeat="product in products" product="product" categories="categories" stores="stores"></admin-product-line>
+    <form>
+        <div class="col-md-6">
+            <div class="row marginTopBottom">
+                <label>Bootcamp Title</label>
+                <input ng-model="newProduct.title" />
+            </div>
+            <div class="row marginTopBottom">
+                <label>Course Report URL</label>
+                <input ng-model="newProduct.courseReport.url" />
+            </div>
+            <div class="row marginTopBottom">
+                <label>Facebook URL</label>
+                <input ng-model="newProduct.facebook.url" />
+            </div>
+            <div class="row marginTopBottom">
+                <label>Google+ URL</label>
+                <input ng-model="newProduct.googlePlus.url" />
+            </div>
+            <div class="row marginTopBottom">
+                <label>LinkedIn URL</label>
+                <input ng-model="newProduct.linkedin.url" />
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row marginTopBottom">
+                <label>Quora URL</label>
+                <input ng-model="newProduct.quora.url" />
+                <button ng-click="checkQuora()">Check Quora</button>
+                <div ng-show="quoraFound === false" ng-hide="quoraFound === true">No data found from Quora!</div>
+                <div ng-show="quoraFound === true" ng-hide="quoraFound === false">Data found from Quora!</div>
+            </div>
+            <div class="row marginTopBottom">
+                <label>Switchup URL</label>
+                <input ng-model="newProduct.switchup.url" />
+            </div>
+            <div class="row marginTopBottom">
+                <label>Techendo URL</label>
+                <input ng-model="newProduct.techendo.url" />
+            </div>
+            <div class="row marginTopBottom">
+                <label>Twitter URL</label>
+                <input ng-model="newProduct.twitter.url" />
+            </div>
+            <div class="row marginTopBottom">
+                <label>Yelp URL</label>
+                <input ng-model="newProduct.yelp.url" />
+            </div>
+        </div>
+        <div class="col-md-12">
+            <div class="row marginTopBottom">
+                <a class="btn btn-primary btn-lg btn-standard" ng-click="addProduct()">ADD THIS BOOTCAMP</a>
+            </div>
+        </div>
+    </form>
 </div>
+<admin-product-line ng-repeat="product in products" product="product"></admin-product-line>
