--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -28,9 +28,9 @@
                         </svg>
                     </a>
                     <ul class="dropdown-menu initialFontSize">
-                        <li ng-show="user">
+                        <!-- <li ng-show="user">
                             <a ng-click="viewUserPage()">Profile</a>
-                        </li>
+                        </li> -->
                         <li>
                             <a ui-sref="about">About</a>
                         </li>
@@ -43,9 +43,9 @@
                         <li ng-show="!user">
                             <a ui-sref="signup">Sign Up</a>
                         </li>
-                        <li ng-show="user">
+                        <!-- <li ng-show="user">
                             <a ng-click="logout()">Logout</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </li>
                 <li ng-show="!user">
